# ghost-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_connection.py
.github/workflows/: ci.yml
docs/: feature-roadmap.md  theme-conventions.md  theming-guide.md
scripts/: check_connection.py  preview.py
src/ghost_mcp/: __init__.py  config.py  errors.py  server.py
src/ghost_mcp/admin/: __init__.py  auth.py  client.py  images.py  pages.py  posts.py  settings.py  themes.py
src/ghost_mcp/research/: __init__.py  brief.py  incumbents.py  interview.py  pages.py  serper.py
src/ghost_mcp/theme/: __init__.py  builder.py  preview.py
src/ghost_mcp/tools/: __init__.py  _client.py  images.py  labels.py  members.py  newsletters.py  offers.py  pages.py  posts.py  prompts.py  research.py  settings.py  tags.py  theme.py  tiers.py  users.py  vision.py
src/ghost_mcp/vision/: __init__.py  contrast.py  structure.py
tests/: test_auth.py  test_brand.py  test_builder.py  test_client.py  test_config.py  test_contrast.py  test_errors.py  test_images.py  test_labels.py  test_members.py  test_newsletters.py  test_offers.py  test_pages.py  test_posts.py  test_preview.py  test_research.py  test_settings.py  test_tags.py  test_themes.py  test_tiers.py  test_users.py  test_vision.py
tests/fixtures/ghost-mcp-smoke-test/: default.hbs  index.hbs  package.json  page.hbs  post.hbs
tests/fixtures/ghost-mcp-smoke-test/assets/built/: screen.css
