[project]
name = "ghost-mcp"
version = "0.1.0"
description = "An MCP server for styling and managing a Ghost blog: gives a model structural sight of the live theme plus tools to restyle and manage the site."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Wesley Carothers", email = "wesleycarothers@outlook.com" }]
keywords = ["ghost", "mcp", "model-context-protocol", "css", "theme", "fastmcp"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "pybars3>=0.9.7",
]

[project.scripts]
ghost-mcp = "ghost_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
